pulse: don' try to reconnect immediately if PA is dying

https://bugs.freedesktop.org/show_bug.cgi?id=35024